# rime-cloverpinyin

./: .gitignore  .gitmodules  build.sh  pack.sh  pyproject.toml
scripts/: README.md  clover-dict-gen.py  scel.py  thuocl2rime.py
src/: clover.dict.yaml
