[tool.poetry]
name = "rime-cloverpinyin"
version = "0.1.0"
description = ""
authors = ["zeromake <a390720046@gmail.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
OpenCC = "^1.1.6"
pypinyin = "^0.49.0"
jieba = "^0.42.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
